--- a/package.jsonc
+++ b/package.jsonc
@@ -3,8 +3,9 @@
     "namespace": "neo",
     "version": "0.1.0",
     "depends": [
-        "neo-buffer^0.3.0-dev",
-        "neo-fun^0.3.3-dev",
+        "neo-buffer^0.4.0",
+        "neo-fun^0.4.0",
+        "zlib^1.2.9",
     ],
     "test_driver": "Catch-Main"
 }
