--- a/package.jsonc
+++ b/package.jsonc
@@ -3,9 +3,9 @@
     "namespace": "neo",
     "version": "0.2.0",
     "depends": [
-        "neo-buffer^0.4.1",
-        "neo-fun^0.5.0",
-        "zlib^1.2.9",
+        "neo-buffer@0.5.0",
+        "neo-fun@0.7.0",
+        "zlib@1.2.9",
     ],
     "test_driver": "Catch-Main"
 }
